compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__int_eq_float.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 314
expression: 1 == 1.0

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:6
  │
1 │ 1 == 1.0
  │      ^^^

Expected type:

    Int

Found type:

    Float


